--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -19,6 +19,7 @@
         .logo-title{
             font-size: 2.5rem;
             color: #b28451;
+            font-weight: 600;
         }
     }
     .navlinks{
