--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,15 +1,15 @@
 
 .btn{
     padding: .5rem 2rem;
-    border: 1px solid #b28451;
+    border: 1px solid #8d69f1;
     background-color: #fff;
-    color: #b28451;
+    color: #8d69f1;
     border-radius: .5rem;
     transition: all .5s;
     cursor: pointer;
     font-size: 1.7rem;
     &:hover{
-        background-color: #b28451;
+        background-color: #8d69f1;
         color: #fff;
     }
 }
