--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -1,22 +1,22 @@
 
 .form{
-    border: 3px solid #b28451;
+    border: 3px solid #8d69f1;
     min-width: 30rem;
-    max-width: 40% !important;
+    max-width: 40% ;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     padding: 2rem;
     border-radius: 1rem;
-    box-shadow: 0.1rem 0rem .2rem #b28451;
-    background-color: #fce8c8;
+    box-shadow: 0.1rem 0rem .2rem #8d69f1;
+    background-color: #fee;
    &> *{
         margin-bottom: 1.5rem;
     }
     .login-title{
         font-size: 2rem;
-        color: #b28451;
+        color: #8d69f1;
     }
     button{
        float: right;
