--- a/src/components/Create/Create.scss
+++ b/src/components/Create/Create.scss
@@ -5,4 +5,47 @@
         font-size: 2rem;
         border-bottom: 1px solid #8d69f1;
     }
-  }
+    .form-div{
+        padding: 5rem;
+        // border: 1px solid red;
+        form{
+            // border: 1px solid green;
+            &>*:not(:last-child){
+                margin-bottom: 2rem;
+            }
+            // &>input{
+            //     padding: 1rem;
+            // }
+            & label{
+                color: black;
+            }
+            & input{
+                border: 1px solid #d7d2d2;
+            }
+            .textarea>*{
+                display: block;
+                width: 100%;
+            }
+            .textarea{
+                label{
+                    font-size: 1.5rem;
+                    // color: #8d69f1;
+                }
+                textarea{
+                    height: 10rem;
+                    padding:.5rem 1.5rem;
+                  border: 1px solid #d7d2d2;
+                    border-radius: .5rem;
+                }
+            }
+            .select-cat ,.assignto{
+                label{
+                    font-size: 1.5rem;
+                }
+            }
+            button{
+                float: right;
+            }
+        }
+    }
+}
