--- a/src/components/ProjectItem/ProjectItem.scss
+++ b/src/components/ProjectItem/ProjectItem.scss
@@ -6,6 +6,7 @@
     border-radius: .5rem;
     box-shadow: .1rem 0rem .3rem #8d69f1;
     cursor: pointer;
+    // align-self: stretch;
     &-title{
         font-size: 1.4rem;
     }
@@ -25,6 +26,12 @@
             height: 3rem;
             border-radius: 50%;
             margin: 0 1rem;
+        }
+        .no-assign{
+            width: 3.5rem;
+            height: 3.5rem;
+            border-radius: 50%;
+            
         }
     }
 }
