--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -10,7 +10,7 @@
     padding: 2rem;
     border-radius: 1rem;
     box-shadow: 0.1rem 0rem .2rem #8d69f1;
-    background-color: #fee;
+    background-color: #eeeeee;
    &> *{
         margin-bottom: 1.5rem;
     }
