--- a/src/components/Filter/Filter.scss
+++ b/src/components/Filter/Filter.scss
@@ -5,13 +5,21 @@
     margin-top: 2rem;
     font-size: 1.5rem;
     color: #fff;
-    span{
+    button{
         padding: 0rem 1rem;
         cursor: pointer;
+        border: none;
+        outline: none;
+        padding: .5rem 1.5rem;
+        color: white;
+        background-color: transparent;
         &:not(:last-child){
             border-right: 1px solid #fff;
         }
     //    border: 1px solid red;
         
+    }
+    .active{
+        opacity: .8;
     }
 }
