--- a/src/components/UsersStatus/Alluser.scss
+++ b/src/components/UsersStatus/Alluser.scss
@@ -2,7 +2,7 @@
 .all-users{
     // border: 1px solid red;
     padding: 4rem 2rem;
-    border-left: 2px solid #16151b;
+   border-left: 2px solid #dfdee6;
     .title{
         font-size: 2rem;
       text-align: right;
